[feat] internal controller 추가
